--- a/wp-content/themes/ZRPat/scss/style.scss
+++ b/wp-content/themes/ZRPat/scss/style.scss
@@ -156,6 +156,7 @@ a:visited {
 
 .menu li:hover {
   text-decoration: underline;
+
 }
 
 .fullMenu {
@@ -181,7 +182,7 @@ a:visited {
 
 .slide {
   padding-top: 25px;
-  color: white;
+  color: rgba(245, 177, 32, 0.9);
   font-size: 40px;
   font-weight: 800;
   list-style: none;
@@ -198,6 +199,9 @@ a:visited {
 }
 #erka {
   font-size: 170px;
+  margin: 0;
+  padding: 15px;
+  padding-top: 30px;
 
 }
 .showing {
@@ -233,9 +237,9 @@ span {
 }
 
 .blueLine{
-  background: rgb(12, 132 ,193);
+  background: rgb(245, 177, 32);
   width: 150px;
-  height: 7px;
+  height: 3px;
   margin-bottom: 15px;
   margin-left: 10px;
   -webkit-transition: 0.4s; /* Safari */
@@ -247,15 +251,16 @@ span {
   height: auto;
   justify-content: center;
   margin: 10px;
-  box-shadow: 6px 6px 8px 0 rgba(12, 132, 193,0.24), 0 8px 25px 0 gray;
+  box-shadow: 6px 6px 8px 0 gray, 0 8px 25px 0 gray;
   overflow: hidden;
   background-color: white;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-size: 18px;
 }
 
 .sectionX:hover {
-  box-shadow: 10px 10px 12px 0 rgba(12, 132, 193,0.24), 0 12px 30px 0 gray;
+  box-shadow: 10px 10px 12px 0 gray, 0 12px 30px 0 gray;
 }
 
 .sectionX:hover .blueLine {
@@ -295,7 +300,7 @@ span {
 #map {
   width: 100%;
   height: 70vh;
-  box-shadow: 6px 6px 8px 0 rgba(12, 132, 193,0.24), 0 8px 25px 0 rgba(12, 132, 193,0.19);
+  box-shadow: 6px 6px 8px 0 gray, 0 8px 25px 0 gray;
   margin-bottom: 20px;
   //margin: 20px;
   //margin-left: 100px;
@@ -307,10 +312,10 @@ span {
   //style dla mapy google
   #map {
     width: 100%;
-    height: 415px;
+    height: 450px;
     //margin: 20px;
     //margin-left: 100px;
-    box-shadow: 6px 6px 8px 0 rgba(12, 132, 193, 0.24), 0 8px 25px 0 gray;
+    box-shadow: 6px 6px 8px 0 gray, 0 8px 25px 0 gray;
   }
 
     .menu {
@@ -331,7 +336,7 @@ span {
   }
 
   span {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .section2, .section3, .section4 {
@@ -362,7 +367,7 @@ span {
 
   }
   .fullMenu li{
-    color: white;
+    color: rgb(245, 177, 32);
     list-style: none;
     font-size: 14px;
     padding-top: 10px;
@@ -372,7 +377,7 @@ span {
     margin: 0;
   }
   .fullMenu li:hover {
-    background-color: rgba(211, 211, 211, 0.8); ;
+    background-color: rgba(245, 177, 32, 0.6);
   }
   .about {
     cursor: pointer;
