--- a/wp-content/themes/ZRPat/scss/style.scss
+++ b/wp-content/themes/ZRPat/scss/style.scss
@@ -5,12 +5,9 @@
 @for $i from 1 through 6 {
   .section#{$i} {
     height: 80vh;
-    //border: 1px solid red;
     background: white;
-
   }
 }
-
 
 body {
   font-family: 'Raleway', sans-serif;
@@ -93,9 +90,11 @@ a:active {
 
 }
 
+.mainRow {
+  height: 70vh;
+}
 
 .section1 {
-  height: 400px;
   position: relative;
   transition: all 1s;
   overflow: hidden;
@@ -108,7 +107,7 @@ a:active {
   background-image: url("../images/background.jpg");
 
   /* Full height */
-  height: 400px;
+  height: 70vh;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -130,6 +129,7 @@ a:active {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
 }
 
 .logo {
@@ -234,6 +234,7 @@ a:visited {
   background: rgb(249, 249, 249);
   font-size: 14px;
   color: gray;
+  height: 50vh;
 }
 
 h2 {
@@ -340,7 +341,7 @@ span {
 }
 
 .singlePage h2 {
-  margin-top: 0 auto;
+  margin-top: 0;
   display: flex;
   justify-content: center;
   font-size: 2em;
