--- a/wp-content/themes/ZRPat/scss/style.scss
+++ b/wp-content/themes/ZRPat/scss/style.scss
@@ -81,12 +81,13 @@ a:active {
 .menuMobileShow {
   width: 250px;
   height:330px;
-  background-color: rgba(211, 211, 211, 0.7);
-  position:absolute;
+  background-color: rgba(211, 211, 211, 0.8);
+  position:fixed;
   top: 60px;
   right: 0px;
   margin-right: 0;
   transition: all 1s;
+  z-index: 1;
 
 }
 
@@ -119,13 +120,25 @@ a:active {
 @media only screen and (max-width: 768px) {
   .parallax {
     background-size: 180%;
+    background-image: url("../images/background.jpg");
+    background-attachment: scroll;
+    background-position: top;
+
+  }
+  .header {
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+
   }
 }
 
 .header {
-  background: rgba(209, 209, 209, 0.7);
+  background: rgba(209, 209, 209, 0.8);
   height: 60px;
 }
+
+
 
 .nav {
   //border: 1px solid red;
@@ -347,16 +360,20 @@ span {
 }
 
 .singlePage h2 {
-  margin-top: 0;
   display: flex;
   justify-content: center;
   font-size: 2em;
+  margin-top: 20px;
+  padding-right: 10px ;
+  padding-left: 10px ;
 
 }
 .singlePage .blueLine {
   margin: 0 auto;
   width: 300px;
   margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
 
 }
 
@@ -413,6 +430,15 @@ span {
   -webkit-transition: 0.4s; /* Safari */
   transition: all 0.4s;}
 
+@media only screen and (max-width: 768px) {
+  .singlePage h2 {
+    font-size: 24px;
+    text-align: center;
+    margin-top: 20px;
+    padding-right: 10px ;
+    padding-left: 10px ;
+  }
+}
 
 //*********************MEDIA*******************
 
