--- a/wp-content/themes/ZRPat/scss/style.scss
+++ b/wp-content/themes/ZRPat/scss/style.scss
@@ -511,7 +511,7 @@ span {
     right: 160px;
     background-color: rgba(209, 209, 209, 0.7);
     width: 150px;
-    height: 160px;
+    height: auto;
     display: inline-block;
     opacity: 0;
     cursor:pointer;
