--- a/wp-content/themes/ZRPat/scss/style.scss
+++ b/wp-content/themes/ZRPat/scss/style.scss
@@ -296,16 +296,16 @@ span {
   margin-bottom: 20px;
 }
 
-.sectionX:hover {
-  box-shadow: 10px 10px 12px 0 gray, 0 12px 30px 0 gray;
-}
-
-.sectionX:hover .blueLine {
-  margin-left:30px;
-}
-.sectionX:hover h2 {
-  margin-left: 30px;
-}
+//.sectionX:hover {
+//  box-shadow: 10px 10px 12px 0 gray, 0 12px 30px 0 gray;
+//}
+//
+//.sectionX:hover .blueLine {
+//  margin-left:30px;
+//}
+//.sectionX:hover h2 {
+//  margin-left: 30px;
+//}
 
 //footer
 .section5 {
